Match-id-2a7b0aedbbc68c91ad25a0413e9cbcb0ddf96b87

--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/app/business/login/login.component.html
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/app/business/login/login.component.html
@@ -144,7 +144,7 @@
     </lv-group>
   </div>
 
-  <div class="main_footer">{{ copyRightLabel }}</div>
+  <div class="main_footer" *ngIf="showCopyRight">{{ copyRightLabel }}</div>
 </div>
 
 <ng-template #pwdComplexTipTpl>
