Match-id-214e470cf834403201f6174c9adde44e265990a9

--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/help/a8000/zh-cn/public_sys-resources/commonltr.css
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/help/a8000/zh-cn/public_sys-resources/commonltr.css
@@ -176,10 +176,7 @@ ul.simple {
 .sliexpand {
   margin-top: 1em;
   margin-bottom: 1em;
-} /*!
-@modify  section topic sectiontitle
-@author  2009-12-02
-*/
+}
 .sectiontitle2contents:link {
   color: #007af4;
 }
