Match-id-a0bc30e327b4c5388a59cacb81c8792b24d733e4

--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/app/app.component.html
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/app/app.component.html
@@ -321,7 +321,7 @@
 <ng-template #helpContentTpl>
   <div class="help-menu-container">
     <section class="help-menu-section">
-      <div class="n-help-link" (click)="openHelp()">
+      <div class="n-help-link" (click)="openHelp()" *ngIf="!isOpenVersion">
         <div class="help-wrapper">
           <span>{{ 'common_online_help_label' | i18n }}</span>
         </div>
