--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/app/business/login/login.component.html
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/app/business/login/login.component.html
@@ -157,7 +157,7 @@
     </lv-group>
   </div>
 
-  <div class="main_footer">{{ copyRightLabel }}</div>
+  <div class="main_footer" *ngIf="showCopyRight">{{ copyRightLabel }}</div>
 </div>
 
 <ng-template #pwdComplexTipTpl>
