Match-id-47687f15d3d7e4bfa6ed0fc771c30d0d84675dda

--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/app/business/system/security/rbac/roles/create-role/create-role-form/create-role-form.component.html
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/app/business/system/security/rbac/roles/create-role/create-role-form/create-role-form.component.html
@@ -34,9 +34,7 @@
   </div>
   <div class="formGroup-h1">
     {{'system_select_permissions_label' | i18n}}
-    <a [href]="helpUrl" target="_blank" lv-link [lvIcon]="true" *ngIf="!isOpenVersion">
-      {{'common_help_word_label' | i18n}}
-    </a>
+    <a [href]="helpUrl" target="_blank" lv-link [lvIcon]="true">{{'common_help_word_label' | i18n}}</a>
   </div>
   <lv-form-item class="form-item-block">
     <lv-form-control>
