Match-id-185726c74e324a41cd4fa39873d8d28c974334d4

--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/app/business/protection/virtualization/kubernetes-container/namespace-restore/namespace-restore.component.html
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/app/business/protection/virtualization/kubernetes-container/namespace-restore/namespace-restore.component.html
@@ -3,9 +3,9 @@
   This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
   If a copy of the MPL was not distributed with this file, You can obtain one at
   http://mozilla.org/MPL/2.0/.
-  
+
   Copyright (c) [2024] Huawei Technologies Co.,Ltd.
-  
+
   THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
   EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
   MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
@@ -96,6 +96,16 @@
     <div class="advanced">
         <lv-collapse [lvType]="'simple'">
             <lv-collapse-panel [lvTitle]="titleTpl" [lvExpanded]="true">
+              <lv-form-item>
+                <lv-form-label>
+                  {{'protection_clients_label' | i18n}}
+                </lv-form-label>
+                <lv-form-control>
+                  <lv-select [lvOptions]="proxyOptions" formControlName="proxyHost" lvValueKey='value'
+                             lvShowCheckAll lvShowFilter lvFilterKey="label" lvFilterMode="contains" lvMode="multiple">
+                  </lv-select>
+                </lv-form-control>
+              </lv-form-item>
                 <lv-form-item>
                     <lv-form-label>
                         {{ 'protetion_modify_env_config_label' | i18n }}
