--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/app/business/protection/virtualization/kubernetes-container/advanced-param/advanced-param.component.html
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/app/business/protection/virtualization/kubernetes-container/advanced-param/advanced-param.component.html
@@ -3,9 +3,9 @@
   This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
   If a copy of the MPL was not distributed with this file, You can obtain one at
   http://mozilla.org/MPL/2.0/.
-  
+
   Copyright (c) [2024] Huawei Technologies Co.,Ltd.
-  
+
   THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
   EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
   MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
@@ -14,6 +14,23 @@
 <lv-collapse [lvMultiExpansion]="'false'" lvType="simple">
     <lv-collapse-panel [lvTitle]="titleTpl" [lvExpanded]="true">
         <lv-form [formGroup]="formGroup" [lvLabelColon]="false" class="formGroup" lvKeepRequiredWidth>
+          <lv-form-item>
+            <lv-form-label>
+              {{'protection_clients_label' | i18n}}
+            </lv-form-label>
+            <lv-form-control>
+              <lv-select [lvOptions]="hostOptions" formControlName="proxyHost" lvValueKey='value'
+                         lvMode="multiple" [lvContentTemplate]="contentTpl"></lv-select>
+              <ng-template #contentTpl let-item>
+                <lv-group lvGutter="4px">
+                  <i lv-icon="{{
+                                  item.linkStatus === dataMap.resource_LinkStatus_Special.normal.value ? 'aui-host-online' : 'aui-host-offline'
+                                }}"></i>
+                  <span>{{ item.label }}</span>
+                </lv-group>
+              </ng-template>
+            </lv-form-control>
+          </lv-form-item>
             <lv-form-item>
                 <lv-form-label>
                     {{'protection_ensure_consistency_backup_label' | i18n}}
