--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/app/business/protection/virtualization/kubernetes-container/create-cluster/create-cluster.component.html
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/app/business/protection/virtualization/kubernetes-container/create-cluster/create-cluster.component.html
@@ -3,9 +3,9 @@
   This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
   If a copy of the MPL was not distributed with this file, You can obtain one at
   http://mozilla.org/MPL/2.0/.
-  
+
   Copyright (c) [2024] Huawei Technologies Co.,Ltd.
-  
+
   THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
   EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
   MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
@@ -41,6 +41,15 @@
             <input lv-input type="text" formControlName="name" />
         </lv-form-control>
     </lv-form-item>
+  <lv-form-item>
+    <lv-form-label>{{'protection_clients_label' | i18n}}</lv-form-label>
+    <lv-form-control>
+      <aui-agent-select [lvOptions]="hostOptions" formControlName="clusterNode" lvValueKey="uuid" lvMode="multiple">
+      </aui-agent-select>
+    </lv-form-control>
+  </lv-form-item>
+
+
     <ng-container *ngIf="formGroup.value.type === dataMap.Cluster_Register_Mode.token.value">
         <lv-form-item>
             <lv-form-label lvRequired>
